[fixes] rendering of terminal on iphone

--- a/src/components/Terminal/style.scss
+++ b/src/components/Terminal/style.scss
@@ -4,26 +4,23 @@
 }
 
 :local(.terminal){
-  background-color:blue;
-  height:0px;
-  transform:translate(0px,250px);
-  transition: height ease-in-out 0.5s, translate ease-in-out 0.5s;
   text-align: left;
   &.run{
-    height:500px;
-    transform:translate(0,0px);
-
+    div{
+      background-color:blue;
+    }
   }
   a{
     color:white;
     &:hover{
+      cursor: pointer;
       color:white;
       text-decoration: none;
-      border-bottom: 1px solid;
+      border-bottom: 1px solid white;
     }
-    margin-bottom: 0.5em;
   }
 }
+
 :local(.button){
   cursor: pointer;
   background-color: black;
